--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Prasanna Gebise – Portfolio</title>
+
   <style>
-    :root{
-      --bg:#0e0e0e; --card:#1a1a1a; --muted:#777; --accent:#00aaff;
+    :root {
+      --bg:#0e0e0e;
+      --card:#1a1a1a;
+      --muted:#777;
+      --accent:#00aaff;
       --glass: rgba(255,255,255,0.03);
     }
-    *{box-sizing:border-box}
+
+    * { box-sizing: border-box; }
+
     body {
       margin: 0;
       font-family: Inter, Arial, Helvetica, sans-serif;
       background: var(--bg);
       color: #e0e0e0;
       line-height: 1.6;
-      -webkit-font-smoothing:antialiased;
+      -webkit-font-smoothing: antialiased;
     }
+
     header {
       background: #151515;
       padding: 26px 20px;
@@ -25,67 +32,89 @@
       border-bottom: 1px solid #222;
       backdrop-filter: blur(6px);
     }
-    header h1 { margin: 0; font-size: 2.1rem; letter-spacing:0.4px }
-    header p { margin:6px 0 0; color:var(--muted) }
+    header h1 { margin: 0; font-size: 2.1rem; }
+    header p { margin: 6px 0 0; color: var(--muted); }
 
-    .container { padding: 40px 6%; max-width:1200px; margin:0 auto }
-    h2 { color: var(--accent); margin-bottom: 18px }
+    .container { padding: 40px 6%; max-width: 1200px; margin: auto; }
+    h2 { color: var(--accent); margin-bottom: 18px; }
 
-    .projects-grid{
-      display:grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap:22px;
-      align-items:start; /* ensures cards grow independently */
+    /* 2 CARDS PER ROW */
+    .projects-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+      gap: 22px;
+      align-items: start;
     }
 
     .project-card {
-      background: linear-gradient(180deg,var(--card), rgba(30,30,30,0.9));
+      background: linear-gradient(180deg, var(--card), rgba(30,30,30,0.9));
       padding: 16px;
       border-radius: 12px;
       border: 1px solid #2a2a2a;
       box-shadow: 0 6px 18px rgba(0,0,0,0.6);
-      height: auto; /* each card grows based on content */
+      height: auto;
     }
 
-    .project-card h3{ margin:0 0 12px; color:#9fd8ff }
-
-    /* IMAGES CAN BE RESIZED HERE */
-    .project-thumb{ 
-      width:100%; 
-      height:auto; /* THIS FIXES YOUR IMAGE CROPPING */
-      max-height:260px; /* optional limit */
-      object-fit:cover; 
-      border-radius:8px; 
-      background:var(--glass); 
-      border:1px solid #222;
-      margin-bottom:10px;
+    .project-card h3 {
+      margin: 0 0 12px;
+      color: #9fd8ff;
     }
 
-    .project-desc{ color:#cfcfcf; font-size:0.96rem; margin-bottom:10px }
-
-    .video-wrap{ margin-top:12px }
-
-    .yt-embed{ 
-      width:100%;
-      aspect-ratio:16/9;
-      border-radius:10px; 
-      overflow:hidden;
-      border:1px solid #333;
+    /* IMAGE SCALING */
+    .project-thumb {
+      width: 100%;
+      height: auto;
+      max-height: 260px;
+      object-fit: cover;
+      border-radius: 8px;
+      background: var(--glass);
+      border: 1px solid #222;
+      margin-bottom: 10px;
     }
 
-    .resume-row{ display:flex; gap:12px; align-items:center; flex-wrap:wrap }
-    .resume-button { padding:10px 16px; background:#0077cc; color:white; text-decoration:none; border-radius:8px }
-    .note { color:var(--muted); font-size:0.9rem }
+    .project-desc {
+      color: #cfcfcf;
+      font-size: 0.96rem;
+      margin-bottom: 10px;
+    }
 
-    footer { text-align:center; padding:28px 10px; color:var(--muted); margin-top:30px }
+    .video-wrap { margin-top: 12px; }
+    .yt-embed {
+      width: 100%;
+      aspect-ratio: 16/9;
+      border-radius: 10px;
+      overflow: hidden;
+      border: 1px solid #333;
+    }
 
-    @media (max-width:480px){ header h1{font-size:1.4rem} }
+    .resume-row {
+      display: flex;
+      gap: 12px;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+    .resume-button {
+      padding: 10px 16px;
+      background: #0077cc;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+    }
+    .note { color: var(--muted); font-size: 0.9rem; }
+
+    footer {
+      text-align: center;
+      padding: 28px 10px;
+      color: var(--muted);
+      margin-top: 30px;
+    }
   </style>
 </head>
+
 <body>
   <header>
     <h1>Prasanna Vardhman Gebise</h1>
-    <p>Contact:  +91 8149463727 •  Mail ID: prasannagebise35226@gmail.com </p>
+    <p>Contact: +91 8149463727 • Mail: prasannagebise35226@gmail.com</p>
   </header>
 
   <main class="container">
@@ -94,10 +123,11 @@
 
       <div class="projects-grid">
 
+        <!-- HolAbot -->
         <article class="project-card">
-          <h3>HolAbot – Holonomic Art Robot (eYRC 2022-23 AIR-3)</h3>
-          <img src="assets/images/Holabot_image.jpg" alt="HolAbot image" class="project-thumb">
-          <p class="project-desc">Omni-wheel robot with pen actuation, feedback and controller nodes, and WiFi socket communication system.</p>
+          <h3>HolAbot – Holonomic Art Robot (eYRC 2022–23 AIR-3)</h3>
+          <img src="assets/images/Holabot_image.jpg" class="project-thumb">
+          <p class="project-desc">Omni-wheel robot with pen actuation, feedback controller nodes, and WiFi socket control.</p>
           <div class="video-wrap">
             <div class="yt-embed">
               <iframe src="https://www.youtube.com/embed/F19YZVfqGnc" frameborder="0" allowfullscreen></iframe>
@@ -105,9 +135,10 @@
           </div>
         </article>
 
+        <!-- ADHIC -->
         <article class="project-card">
           <h3>ADHIC – Autonomous Disinfectant Holonomic Interactive Cobot</h3>
-          <p class="project-desc">Holonomic base + URDF-based serial manipulator with UV disinfectant module. SLAM in Gazebo with custom world. Patent Published.</p>
+          <p class="project-desc">Holonomic base + serial manipulator with UV disinfectant module. SLAM in Gazebo. Patent Published.</p>
           <div class="video-wrap">
             <div class="yt-embed">
               <iframe src="https://www.youtube.com/embed/UEWtuWPV_f8" frameborder="0" allowfullscreen></iframe>
@@ -115,10 +146,11 @@
           </div>
         </article>
 
+        <!-- Lunar Scout -->
         <article class="project-card">
-          <h3>Lunar Scout – Self-Balancing Bike (eYRC 2023-24 AIR-4)</h3>
-          <img src="assets/images/Lunarscout.jpg" alt="Lunar scout poster" class="project-thumb">
-          <p class="project-desc">Omni-wheel stabilization, LQR controller, and NRF-based transmitter-receiver.</p>
+          <h3>Lunar Scout – Self-Balancing Bike (eYRC 2023–24 AIR-4)</h3>
+          <img src="assets/images/Lunarscout.jpg" class="project-thumb">
+          <p class="project-desc">Self-balancing omni-wheel system with LQR controller and NRF transmitter.</p>
           <div class="video-wrap">
             <div class="yt-embed">
               <iframe src="https://www.youtube.com/embed/gFfpGj2wt28" frameborder="0" allowfullscreen></iframe>
@@ -126,23 +158,27 @@
           </div>
         </article>
 
+        <!-- Hybrid VTOL -->
         <article class="project-card">
-          <h3>Hybrid VTOL – Design & Fabrication (e-Yantra Summer Intern 2023)</h3>
-          <img src="assets/images/VTOL.jpg" alt="Hybrid VTOL poster" class="project-thumb">
-          <p class="project-desc">Design and fabrication of a hybrid VTOL platform — structural design, CAD, CFD, component selection and integration.</p>
+          <h3>Hybrid VTOL – Design & Fabrication (e-Yantra Intern 2023)</h3>
+          <img src="assets/images/VTOL.jpg" class="project-thumb">
+          <p class="project-desc">Hybrid VTOL structural design, aerodynamics, CAD, CFD & component integration.</p>
         </article>
 
+        <!-- LQR + VIO -->
         <article class="project-card">
-          <h3>Onboard LQR with VIO for Quadcopters (e-Yantra Summer Intern 2024)</h3>
-          <img src="assets/images/EYSIP24_3.jpg" alt="VIO poster" class="project-thumb">
-          <p class="project-desc">Implemented onboard Visual Inertial Odometry and LQR controller for non-GPS indoor stabilization and control.</p>
-          <p class="project-desc">VIO (Visual Inertial Odometry) pipeline demo on hardware.</p>
+          <h3>Onboard LQR with VIO for Quadcopters (e-Yantra Intern 2024)</h3>
+          <img src="assets/images/EYSIP24_3.jpg" class="project-thumb">
+          <p class="project-desc">Indoor non-GPS stabilization using onboard VIO + LQR controller.</p>
+
+          <p class="project-desc">VIO hardware demo:</p>
           <div class="video-wrap">
             <div class="yt-embed">
               <iframe src="https://www.youtube.com/embed/7Ls3g0lJd3Y" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
-          <p class="project-desc">LQR simulation demo.</p>
+
+          <p class="project-desc">LQR simulation demo:</p>
           <div class="video-wrap">
             <div class="yt-embed">
               <iframe src="https://www.youtube.com/embed/yTIX0JBDJCE" frameborder="0" allowfullscreen></iframe>
@@ -150,9 +186,10 @@
           </div>
         </article>
 
+        <!-- Cable-driven Manipulator -->
         <article class="project-card">
           <h3>Cable-Driven Parallel Manipulator Testbed (HCR Lab, IITGN)</h3>
-          <p class="project-desc">Upper limb rehabilitation testbed: real-time force control (SbRIO + LabVIEW), analytical FK for CDPM, tension optimization via QP.</p>
+          <p class="project-desc">Upper-limb rehab system: SbRIO force control, analytical FK, tension optimization (QP).</p>
           <div class="video-wrap">
             <div class="yt-embed">
               <iframe src="https://www.youtube.com/embed/EyDwal9ELm8" frameborder="0" allowfullscreen></iframe>
@@ -160,15 +197,43 @@
           </div>
         </article>
 
+        <!-- Zebu Internship -->
         <article class="project-card">
-          <h3>Robotics Software Internship (Zebu Intelligent Systems, Hyderabad)</h3>
-          <p class="project-desc">Implemented KF, FSM, Visual SLAM, SfM reconstruction, ORB/SIFT/SURF, deployment on Jetson Orin NX & Raspberry Pi 5.</p>
-          <p class="project-desc">Visual SLAM using ORB-SLAM (stereo).</p>
+          <h3>Robotics Software Internship – Zebu Intelligent Systems</h3>
+          <p class="project-desc">KF, FSM, Visual SLAM, SfM, ORB/SIFT/SURF, deployment on Jetson Orin NX & Raspberry Pi 5.</p>
+
+          <p class="project-desc">ORB-SLAM demo:</p>
           <div class="video-wrap">
             <div class="yt-embed">
               <iframe src="https://www.youtube.com/embed/vFrbPghcAWo" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
-          <p class="project-desc">Drone-in-a-box demo.</p>
+
+          <p class="project-desc">Drone-in-a-box demo:</p>
           <div class="video-wrap">
             <div class="yt-embed">
+              <iframe src="https://www.youtube.com/embed/70nkUwAZE_U" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+        </article>
+
+      </div>
+    </section>
+
+    <!-- Resume -->
+    <section id="resume" style="margin-top:34px">
+      <h2>Resume</h2>
+      <div class="resume-row">
+        <a href="assets/resume/resume.pdf" class="resume-button" download>Download Resume (PDF)</a>
+        <span class="note">Alternatively upload any public PDF to /assets/resume/ and update the link.</span>
+      </div>
+    </section>
+
+  </main>
+
+  <footer>
+    © 2025 Prasanna Gebise — Hosted on GitHub Pages
+  </footer>
+
+</body>
+</html>
