--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
         <!-- HolAbot -->
         <article class="project-card">
-          <h3>HolAbot – Holonomic Art Robot (eYRC 2022–23 AIR-3)</h3>
+          <h3>HolAbot – Holonomic Art Robot (eYRC 2022–23 AIR3)</h3>
           <img src="assets/images/Holabot_image.jpg" class="project-thumb">
           <p class="project-desc">Omni-wheel robot with pen actuation, camera feedback and controller nodes, communication through WiFi socket.</p>
           <div class="video-wrap">
@@ -145,7 +145,7 @@
 
         <!-- Lunar Scout -->
         <article class="project-card">
-          <h3>Lunar Scout – Self-Balancing Bike (eYRC 2023–24 AIR-4)</h3>
+          <h3>Lunar Scout – Self-Balancing Bike (eYRC 2023–24 AIR4)</h3>
           <img src="assets/images/Lunarscout.jpg" class="project-thumb">
           <p class="project-desc">Self-balancing omni-wheel system with LQR (Linear quadratic regulator) and NRF transmitter.</p>
           <div class="video-wrap">
@@ -233,7 +233,7 @@
       <h2>Resume</h2>
       <div class="resume-row">
         <a href="assets/resume/resume.pdf" class="resume-button" download>Download Resume (PDF)</a>
-        <span class="note">Alternatively upload any public PDF to /assets/resume/ and update the link.</span>
+        <!-- <span class="note"></span> -->
       </div>
     </section>
 
